--- a/sass/layouts/_timeline.scss
+++ b/sass/layouts/_timeline.scss
@@ -267,7 +267,7 @@
               .title {
                 font-weight: 500;
                 margin-bottom: 15px;
-                color: $dark-blue;
+                // color: $dark-blue;
                 text-decoration: none;
               }
             }
@@ -301,7 +301,7 @@
               .title {
                 font-weight: 500;
                 margin-bottom: 15px;
-                color: $dark-blue;
+                // color: $dark-blue;
                 text-decoration: none;
               }
             }
